--- a/styles.css
+++ b/styles.css
@@ -125,9 +125,16 @@ h3 {
 }
 .tv-item {
     background-color: purple;
-    padding: 10px 20px;
+    padding: 20px;
     margin: 10px;
     border-radius: 24px;
     color: antiquewhite;
-    font-size: 12px;
+    font-size: 14px;
+    white-space: pre-line;
+    text-align: justify;
+    line-height: 1.6;
+
+}
+.tv-name {
+    font-variant: all-small-caps;
 }
